fixed surefire plugin